[gd_scene load_steps=6 format=2]

[ext_resource path="res://screens/basic_screen.tscn" type="PackedScene" id=1]
[ext_resource path="res://screens/gameover_screen/gameover_screen.gd" type="Script" id=2]
[ext_resource path="res://screens/GaroaHackerClubeBold.otf" type="DynamicFontData" id=3]
[ext_resource path="res://levels/tilesets/tileset.tres" type="TileSet" id=4]

[sub_resource type="DynamicFont" id=1]

size = 50
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="game_over" index="0" instance=ExtResource( 1 )]

script = ExtResource( 2 )
next_scene = "res://screens/promo_screen/promo_screen.tscn"

[node name="color_rect" parent="transition" index="0"]

margin_left = -1280.0
margin_right = -256.0

[node name="highscore_table" type="VBoxContainer" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 112.0
margin_top = 64.0
margin_right = 912.0
margin_bottom = 528.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="new_highscore" type="Label" parent="highscore_table" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 485.0
margin_bottom = 82.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "new highscore!!"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="current_score" type="Label" parent="highscore_table" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 800.0
margin_bottom = 409.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "score: {amount}"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="highscore" type="Label" parent="highscore_table" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 413.0
margin_right = 800.0
margin_bottom = 464.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "highscore: {amount}"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags", "Visibility" ]

[node name="tilemap" type="Node2D" parent="." index="3"]

__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="tile_map" type="TileMap" parent="tilemap" index="0"]

modulate = Color( 0.886719, 0.886719, 0.886719, 1 )
mode = 0
tile_set = ExtResource( 4 )
cell_size = Vector2( 64, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 65535, 5, 0, 15, 5, 0, 196607, 5, 0, 131087, 5, 0, 327679, 5, 0, 262159, 5, 0, 458751, 5, 0, 393231, 5, 0, 589823, 5, 0, 524303, 5, 0 )
_sections_unfolded = [ "Cell", "Visibility" ]

[node name="background" type="TileMap" parent="tilemap" index="1"]

modulate = Color( 0.40625, 0.40625, 0.40625, 1 )
z_index = -2
mode = 0
tile_set = ExtResource( 4 )
cell_size = Vector2( 128, 128 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 0, 1073741827, 0, 1, 1073741827, 0, 2, 1073741827, 0, 3, 1073741827, 0, 4, 1073741827, 0, 5, 1073741827, 0, 6, 1073741827, 0, 7, 1073741827, 0, 65536, 3, 0, 65537, 3, 0, 65538, 3, 0, 65539, 3, 0, 65540, 3, 0, 65541, 3, 0, 65542, 3, 0, 65543, 3, 0, 131072, 3, 0, 131073, 3, 0, 131074, 3, 0, 131075, 3, 0, 131076, 3, 0, 131077, 3, 0, 131078, 3, 0, 131079, 3, 0, 196608, 3, 0, 196609, 3, 0, 196610, 3, 0, 196611, 3, 0, 196612, 3, 0, 196613, 3, 0, 196614, 3, 0, 196615, 3, 0, 262144, 3, 0, 262145, 3, 0, 262146, 3, 0, 262147, 3, 0, 262148, 3, 0, 262149, 3, 0, 262150, 3, 0, 262151, 3, 0 )
_sections_unfolded = [ "Cell", "Visibility", "Z Index" ]


